# severino-vault-mcp

./: .gitignore  .gitmessage  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  STRUCTURE.md  config.example.toml  cordon.checks.json  pyproject.toml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pip-audit.yml  release.yml  scorecard.yml
docs/: ai-safety-security.md  ai-tool-contract.md  architecture.md  demo.md  federated-retrieval.md  migration-guide.md  operator-workflows.md  release-checklist.md  testing-ci.md
docs/releases/: v2.0.0.md  v2.2.0.md
examples/sample-vault/: README.md
examples/sample-vault/.svmc/: aliases.toml
examples/sample-vault/00 Inbox/: 2026-05-16 093000 rotate CA passphrase runbook.md
examples/sample-vault/00 Templates/: Decision Record.md  Infra Doc.md  Runbook.md  Writeup.md
examples/sample-vault/01 Projects/: Client Edge DNS.md  Homelab DNS.md
examples/sample-vault/02 Infrastructure/: AdGuard Home.md  Offline CA.md
examples/sample-vault/02 Infrastructure/00 Reporting/: Navigate by a Quick Index.md
examples/sample-vault/02 Infrastructure/Local PKI/: Offline CA.md
examples/sample-vault/03 Runbooks/: Add Nginx Proxy Host.md  Generate Homelab Certificate.md  Generate Internal Service Certificate.md  Quick Index.md
examples/sample-vault/04 Reference/: Nginx Proxy Manager primer.md
examples/sample-vault/05 Writeups/internal-https-with-a-private-ca/: index.md
examples/sample-vault/06 Pages/about/: index.md
examples/sample-vault/99 Archive/: Manual Cert Renewal (superseded).md
scripts/: check.sh  eval_ranking.py  prepare-release.sh  release.sh  version_check.py
src/severino_knowledge_router/: __init__.py  __main__.py  config.py  sensitivity.py  server.py  vault.py
src/severino_vault_mcp/: __init__.py  __main__.py  atomic_write.py  brief_service.py  cli.py  cli_introspect.py  config.py  context.py  core_tools.py  daily_notes.py  daily_write.py  doctor.py  edu_server.py  frontmatter.py  hq_manifest.py  infra_datasets.py  jsonio.py  mirror.py  paths.py  schema.py  search.py  secret_unlock.py  sections.py  sensitivity.py  server.py  site_ops_service.py  tabular.py  task_service.py  tech_groups.py  tools_site_ops.py  topology.py  vault.py  vault_query_service.py  vault_search_service.py  vault_write_service.py  writeup_service.py  writeups.py
src/severino_vault_mcp/labs/: __init__.py  hq_manifest.py  infra_datasets.py  tech_groups.py  topology.py  writeup_service.py  writeups.py
src/severino_vault_mcp/tools/: __init__.py  infra_datasets.py  site_ops.py  topology.py  writeups.py
tests/: test_cli_dispatch.py  test_daily_write.py  test_doctor.py  test_edu_server.py  test_education_profile.py  test_hq_manifest.py  test_infra_datasets.py  test_jsonio.py  test_schema.py  test_search.py  test_site_ops.py  test_tabular.py  test_task_service.py  test_topology.py  test_writeups.py
tests/golden/: cli-describe.json  list_tools.py  mcp-tools.txt  schema.json  verify.sh
