[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "severino-vault-mcp"
version = "2.1.0"
description = "Local-first MCP server for safely querying Git-backed Obsidian runbooks and operations inventories with AI tools."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Joseph Severino", email = "github@jseverino.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "obsidian",
    "runbooks",
    "local-first",
    "network-security",
    "ai-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
severino-vault-mcp = "severino_vault_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/joeseverino/severino-vault-mcp"
Issues = "https://github.com/joeseverino/severino-vault-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/severino_vault_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length is enforced softly

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
