[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "severino-vault-mcp"
version = "2.4.0"
description = "Local-first MCP server for safely querying Git-backed Obsidian runbooks and operations inventories with AI tools."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Joseph Severino", email = "github@jseverino.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "obsidian",
    "runbooks",
    "local-first",
    "network-security",
    "ai-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.27",
    "starlette>=1.0.1",
    # cordon's Python reference emitter — the single source for our command-surface
    # contract. We consume it rather than maintain a copy (cli_introspect.py is a
    # thin binding). Resolved from cordon's main via the git source below.
    "cordon-emit",
    # The domain-agnostic engine (schema profiles, index, search, task ledger,
    # register_core). Local path source below for dev; flip to git/PyPI on release.
    "vault-engine",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
severino-vault-mcp = "severino_vault_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/joeseverino/severino-vault-mcp"
Issues = "https://github.com/joeseverino/severino-vault-mcp/issues"

[tool.uv.sources]
# cordon-emit ships in the cordon repo under emitters/python. Both repos are
# public, so this HTTPS source resolves auth-free locally and in CI (uv fetches
# it during `uv sync`). Tracks cordon's main; uv.lock pins the exact commit, so
# pull a newer emitter deliberately with `uv lock --upgrade-package cordon-emit`.
cordon-emit = { git = "https://github.com/joeseverino/cordon", subdirectory = "emitters/python" }
# vault-engine is the sibling repo in Assets/. Non-editable so it's built into the
# environment (and the uv-tool install) and importable everywhere; re-sync after
# engine changes. On release this becomes a git source
# ({ git = "https://github.com/joeseverino/vault-engine" }) or a PyPI version.
vault-engine = { path = "../vault-engine" }

[tool.hatch.build.targets.wheel]
packages = ["src/severino_vault_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length is enforced softly

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
